# utf_utils

./: .gitignore  CMakeLists.txt  Makefile  README.md  pdf.gnuplot  svg.gnuplot
src/: utf_utils.cpp  utf_utils.h
test/: test_conversions_16.cpp  test_conversions_32.cpp  test_main.cpp
